--- a/index.html
+++ b/index.html
@@ -653,9 +653,9 @@
                 
                 <div class="footer-section">
                     <h3>Kontakt</h3>
-                    <a href="mailto:info@aiemailagent.cz">info@aiemailagent.cz</a>
-                    <a href="tel:+420123456789">+420 123 456 789</a>
-                    <p>Praha, Česká republika</p>
+                    <a href="mailto:info@aiemailagent.cz">tomas@stejdesign.cz</a>
+                    <a href="tel:+420123456789">+420 608 818 022</a>
+                    <p>Brno, Česká republika</p>
                 </div>
             </div>
             
