--- a/dashboard.html
+++ b/dashboard.html
@@ -2341,71 +2341,45 @@
                     </div>
                 </div>
 <!-- Admin Page -->
-<div class="page-content" id="admin">
-    <div class="page-container">
-        <div class="admin-stats">
-            <div class="stat-card">
-                <div class="stat-header">
-                    <span class="stat-title">Celkem uživatelů</span>
-                    <span class="stat-icon">👥</span>
-                </div>
-                <div class="stat-value" id="admin-total-users">-</div>
-            </div>
-            <div class="stat-card">
-                <div class="stat-header">
-                    <span class="stat-title">Platící zákazníci</span>
-                    <span class="stat-icon">⭐</span>
-                </div>
-                <div class="stat-value" id="admin-paying-users">-</div>
-            </div>
-            <div class="stat-card">
-                <div class="stat-header">
-                    <span class="stat-title">Připojené emaily</span>
-                    <span class="stat-icon">📧</span>
-                </div>
-                <div class="stat-value" id="admin-connected-emails">-</div>
-            </div>
-            <div class="stat-card">
-                <div class="stat-header">
-                    <span class="stat-title">AI akce dnes</span>
-                    <span class="stat-icon">🤖</span>
-                </div>
-                <div class="stat-value" id="admin-ai-today">-</div>
-            </div>
-        </div>
-        
-        <div class="users-section">
-            <div class="section-header">
-                <h2 class="section-title">Správa uživatelů</h2>
-                <div class="search-filters">
-                    <div class="search-box">
-                        <span class="search-icon">🔍</span>
-                        <input type="search" class="search-input" placeholder="Hledat uživatele..." id="userSearch">
-                    </div>
-                    <select class="filter-select" id="roleFilter">
-                        <option value="all">Všechny role</option>
-                        <option value="admin">Admin</option>
-                        <option value="user">Uživatel</option>
-                    </select>
-                </div>
-            </div>
-            <table class="users-table">
-                <thead>
-                    <tr>
-                        <th>Uživatel</th>
-                        <th>Plán</th>
-                        <th>Role</th>
-                        <th>Datum registrace</th>
-                        <th>Akce</th>
-                    </tr>
-                </thead>
-                <tbody id="adminUsersTableBody">
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
 
+ <div class="admin-stats">
+                        <div class="stat-card"><div class="stat-header"><span class="stat-title">Celkem uživatelů</span><span class="stat-icon">👥</span></div><div class="stat-value" id="admin-total-users">-</div></div>
+                        <div class="stat-card"><div class="stat-header"><span class="stat-title">Platící zákazníci</span><span class="stat-icon">⭐</span></div><div class="stat-value" id="admin-paying-users">-</div></div>
+                        <div class="stat-card"><div class="stat-header"><span class="stat-title">Připojené emaily</span><span class="stat-icon">📧</span></div><div class="stat-value" id="admin-connected-emails">-</div></div>
+                        <div class="stat-card"><div class="stat-header"><span class="stat-title">AI akce dnes</span><span class="stat-icon">🤖</span></div><div class="stat-value" id="admin-ai-today">-</div></div>
+                    </div>
+                    <div class="users-section">
+                        <div class="section-header">
+                            <h2 class="section-title">Správa uživatelů</h2>
+                            <div class="search-filters">
+                                <div class="search-box"><span class="search-icon">🔍</span><input type="search" class="search-input" placeholder="Hledat uživatele..." id="userSearch"></div>
+                                <select class="filter-select" id="roleFilter"><option value="all">Všechny role</option><option value="admin">Admin</option><option value="user">Uživatel</option></select>
+                            </div>
+                        </div>
+                        <table class="users-table">
+                            <thead><tr><th>Uživatel</th><th>Plán</th><th>Role</th><th>Datum registrace</th><th>Akce</th></tr></thead>
+                            <tbody id="adminUsersTableBody"></tbody>
+                        </table>
+                    </div>
+                    <div class="users-section" style="margin-top: 2rem;">
+                        <div class="section-header">
+                            <h2 class="section-title">Poslední aktivita</h2>
+                            <button class="btn btn-primary btn-sm" id="refresh-log-btn">🔄 Obnovit</button>
+                        </div>
+                        <table class="users-table">
+                            <thead>
+                                <tr>
+                                    <th>Čas</th>
+                                    <th>Uživatel</th>
+                                    <th>Akce</th>
+                                    <th>Status</th>
+                                    <th>Detaily</th>
+                                </tr>
+                            </thead>
+                            <tbody id="activityLogTableBody">
+                                </tbody>
+                        </table>
+                    </div>
 
 
             </div>
@@ -5709,6 +5683,61 @@ function initAdminEventListeners() {
         if (e.target.hasAttribute('data-close-modal') || e.target === editModal) {
             editModal.classList.remove('show');
         }
+    });
+}
+
+
+
+async function loadActivityLog() {
+    const tableBody = document.getElementById('activityLogTableBody');
+    if (!tableBody) return;
+    tableBody.innerHTML = '<tr><td colspan="5" style="text-align: center;">Načítám log...</td></tr>';
+    
+    const dashboardUserEmail = localStorage.getItem('userEmail');
+
+    try {
+        const response = await fetch(`${window.BACKEND}/api/admin/activity-log?dashboardUserEmail=${encodeURIComponent(dashboardUserEmail)}`);
+        const data = await response.json();
+
+        if (!data.success) throw new Error(data.message);
+
+        if (data.log.length === 0) {
+            tableBody.innerHTML = '<tr><td colspan="5" style="text-align: center;">Žádná aktivita k zobrazení.</td></tr>';
+            return;
+        }
+
+        tableBody.innerHTML = data.log.map(entry => {
+            const time = new Date(entry.timestamp).toLocaleTimeString('cs-CZ', { hour: '2-digit', minute: '2-digit' });
+            const statusClass = entry.status === 'error' ? 'role-admin' : 'role-user'; // Použijeme existující třídy pro barvy
+            const statusText = entry.status === 'error' ? 'Chyba' : 'Úspěch';
+            const actionButton = entry.status === 'error' 
+                ? '<button class="btn btn-secondary btn-sm">Zkontrolovat</button>' 
+                : '<button class="btn btn-secondary btn-sm" style="opacity: 0.5; cursor: default;">Zobrazit</button>';
+
+            return `
+                <tr>
+                    <td>${time}</td>
+                    <td>${escapeHtml(entry.user_email)}</td>
+                    <td>${escapeHtml(entry.action)}</td>
+                    <td><span class="role-badge ${statusClass}">${statusText}</span></td>
+                    <td>${actionButton}</td>
+                </tr>
+            `;
+        }).join('');
+    } catch (error) {
+        tableBody.innerHTML = `<tr><td colspan="5" style="color: red; text-align: center;">Chyba: ${error.message}</td></tr>`;
+    }
+}
+
+//  listener pro tlačítko Obnovit
+document.getElementById('refresh-log-btn')?.addEventListener('click', loadActivityLog);
+
+
+const adminTabLink = document.querySelector('.nav-link[data-page="admin"]');
+if (adminTabLink) {
+    adminTabLink.addEventListener('click', () => {
+        loadAdminUsers();
+        loadActivityLog(); 
     });
 }
 
